--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,161 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f1f1f1;
+}
+/* h1 {
+  text-align: center;
+  background-color: #87aba6;
+} */
+.main {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+.movie-card {
+  background: #fff;
+  padding: 0;
+  border: none;
+  border-radius: 10px;
+  /* box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #f1f1f1; */
+  display: flex;
+}
+.movie-card:not(:first-child) {
+  margin-top: 20px;
+}
+.movie-card:last-child {
+  margin-bottom: 50px;
+}
+.movie-card .left {
+  flex: 1;
+  padding: 5px
+}
+.movie-card .left img {
+  height: 200px;
+}
+.movie-card .right {
+  position: relative;
+  flex: 10;
+}
+.movie-card .title {
+  padding: 10px 20px;
+  font-size: 25px;
+  font-weight: 600;
+}
+.movie-card .plot {
+  margin-top: 20px;
+  padding: 0 20px;
+}
+.movie-card .price {
+  margin-top: 20px;
+  padding: 0 20px;
+  font-weight: 500;
+  color: rgb(0, 75, 0)
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  
+  width: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+.footer .rating {
+  font-size: 20px;
+  font-weight: 600;
+  flex:1
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.footer .stars{
+  width: 20px;
+  height: 20px;
+}
+.footer .star-dis {
+  font-size: 20px;
+  font-weight: 600;
+  flex:1;
+  position: relative;
+}
+
+footer.starCount {
+  font-size: 20px;
+  font-weight: 600;
+  position:absolute;
+  left: 50;
+
+}
+
+
+.footer .str-btn {
+  width: 7px;
+  height: 7px
+}
+.footer button {
+  font-size: 15px;
+  padding: 7px 10px;
+  text-shadow: none;
+  border-radius: 3px;
+  border: none;
+  font-weight: 600;
+  
+ 
+}
+.favorite-btn {
+  background-color: #bc16dd;
+  color: #fff;
+  margin: 5px;
+}
+.cart-btn{
+  
+      background-color: #251bb1;
+      color: #fff;
+      margin: 5px;
+    
+}
+.unfavorite-btn {
+  background-color: #db2828;
+  color: #fff;
+  text-shadow: none;
+  margin: 5px;
+}
+
+.nav {
+  width:100%;
+  height: 70px;
+  background-color:#3e6697cf;
+  display: flex;
+  justify-content:space-between;
+  padding: 5px;
+}
+
+.title {
+  font-size: 30px;
+  color: #fff;
+  font-weight: 600;
+  font-family: 'Montserrat sans-serif';
+  text-transform: uppercase;
+  margin-left: 20px;
+}
+
+.cartContainer {
+  position: relative;
+  cursor: pointer;
+}
+
+.cartIcon {
+  height: 48px;
+  margin-right: 20px;
+}
+
+.cartCount {
+  background-color: white;
+  border-radius: 50%;
+  padding: 4px 8px;
+  position: absolute;
+  right: 10px;
+  top: -3px;
+  font-size: 12px;
 }
